--- a/01-FashionBlog/index.html
+++ b/01-FashionBlog/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/elements-and-structure/profile.jpg" alt="IsaImage">
+  <a href="#contact">
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/elements-and-structure/profile.jpg" alt="IsaImage">
+  </a>
   <h3>by Isabelle Rodriguez | 1 day ago</h3>
   <h1>An Insider’s Guide to NYFW</h1>
   <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/elements-and-structure/image-one.jpeg" alt="FirstImage">
@@ -32,6 +34,10 @@
     <li>Fall’s It Color: Blush</li>
   </ul>
   <h2>Dressing for the Shows</h2>
+
+<div id="contact">
+  <p> <strong>email</strong>:isa123@fashionblog.com | <strong>phone</strong>: 111-222-3333 | <strong>address</strong>: 371 284th St, New York, NY, 12345</p>
+</div>
 
 </body>
 
