--- a/EclipseEE/DemoApp/WebContent/index.html
+++ b/EclipseEE/DemoApp/WebContent/index.html
@@ -5,6 +5,12 @@
 <title>THE TITLE</title>
 </head>
 <body>
-	Hello World!
+
+	<form action="add">
+	Enter 1st number : <input type="text" name="num1"><br>
+	Enter 2nd number : <input type="text" name="num2"><br>
+	<input type="submit">	
+	</foam>
+	
 </body>
 </html>
